--- a/src/network_benchmark/config.h.in
+++ b/src/network_benchmark/config.h.in
@@ -11,6 +11,8 @@
 #ifndef NETWORK_BENCHMARK_CONFIG_IN_H_
 #define NETWORK_BENCHMARK_CONFIG_IN_H_
 
+#cmakedefine NET_BENCH_VERSION "@NET_BENCH_VERSION@"
+
 #cmakedefine NET_BENCH_USE_DLL
 
 #endif // !NETWORK_BENCHMARK_CONFIG_IN_H_
